--- a/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Views/CallStack.axaml
+++ b/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Views/CallStack.axaml
@@ -6,10 +6,13 @@
              xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
              xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
              xmlns:vm="clr-namespace:Modern.Vice.PdbMonitor.Engine.ViewModels;assembly=Modern.Vice.PdbMonitor.Engine"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:DataType="vm:CallStackViewModel"
+             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="100"
+             x:DataType="vm:ICallStackViewModel"
              x:Class="Modern.Vice.PdbMonitor.Views.CallStack">
-  <DataGrid Name="Grid" ItemsSource="{Binding CallStack}" AutoGenerateColumns="False">
+  <Design.DataContext>
+    <vm:DesignCallStackViewModel />
+  </Design.DataContext>
+  <DataGrid Name="Grid" ItemsSource="{Binding CallStack}" AutoGenerateColumns="False" FontFamily="{StaticResource CodeFont}"> 
     <DataGrid.Resources>
       <c:HexAddressConverter x:Key="HexAddressConverter" />
     </DataGrid.Resources>
@@ -20,17 +23,17 @@
     </i:Interaction.Behaviors>
     <DataGrid.Columns>
       <DataGridTextColumn Header="Address" Binding="{Binding Address, Converter={StaticResource HexAddressConverter}, Mode=OneWay}"
-          IsReadOnly="True" Width="100" CellStyleClasses="colored" />
+          IsReadOnly="True" Width="100" />
       <DataGridTextColumn Header="Line" Binding="{Binding LineNumber, Mode=OneWay}"
-        IsReadOnly="True" Width="80" CellStyleClasses="colored" />
+        IsReadOnly="True" Width="80" />
       <DataGridTextColumn Header="File" Binding="{Binding FileText}, Mode=OneWay}"
-        IsReadOnly="True" Width="140" CellStyleClasses="colored" />
+        IsReadOnly="True" Width="140" />
       <DataGridTextColumn Header="Function" Binding="{Binding FunctionText, Mode=OneWay}"
-        IsReadOnly="True" Width="200" CellStyleClasses="colored" />
+        IsReadOnly="True" Width="200" />
       <DataGridTextColumn Header="Source" Binding="{Binding LineText}, Mode=OneWay}"
-        IsReadOnly="True" Width="300" CellStyleClasses="colored" />
+        IsReadOnly="True" Width="300" />
       <DataGridTextColumn Header="Assembly" Binding="{Binding Assembly}, Mode=OneWay}"
-        IsReadOnly="True" Width="300" CellStyleClasses="colored" />
+        IsReadOnly="True" Width="300" />
     </DataGrid.Columns>
   </DataGrid>
 </UserControl>
